--- a/templates/charts/ic.html
+++ b/templates/charts/ic.html
@@ -73,11 +73,30 @@
     <div class="col-12 col-lg-8">
       <div class="card h-100">
         <ul class="list-group list-group-flush h-100">
-          <li class="list-group-item fw-bold">Chart</li>
+          <li class="list-group-item fw-bold">Portfolio Value Over Time</li>
           <li class="list-group-item h-100 result-chart">
             <canvas id="resultsChart"></canvas>
           </li>
         </ul>
+      </div>
+    </div>
+  </div>
+  <div class="row pb-3">
+    <div class="col-12">
+      <div class="card">
+        <table class="table table-hover p-2" id="asset-stat-table">
+          <thead>
+            <tr>
+              <th scope="col">Asset</th>
+              <th scope="col">Total Amount</th>
+              <th scope="col">Total Invested</th>
+              <th scope="col">Total Value</th>
+              <th scope="col">% Change</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
